Update links in resume_image.html

--- a/resume_image.html
+++ b/resume_image.html
@@ -113,11 +113,11 @@
 						<div class="menu-topmenu-container">
 							<ul class="menu">
 								<li class="menu-item">
-									<a href="index_slider.html">Home</a>
+									<a href="index.html">Home</a>
 									<!-- <ul class="sub-menu">
 										<li class="menu-item"><a href="index.html">Home Default</a></li>
 										<li class="menu-item"><a href="index_creative.html">Home Creative</a></li>
-										<li class="menu-item"><a href="index_slider.html">Home Slider</a></li>
+										<li class="menu-item"><a href="index.html">Home Slider</a></li>
 										<li class="menu-item"><a href="index_personal.html">Home Personal</a></li>
 										<li class="menu-item"><a href="index_onepage.html" target="blank">Home OnePage</a></li>
 										<li class="menu-item"><a href="index_image.html">Home Image</a></li>
@@ -179,7 +179,7 @@
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-bread">
 									<p class="breadcrumbs">
-										<a href="index_slider.html">Home</a> / Resume
+										<a href="index.html">Home</a> / Resume
 									</p>
 								</div>
 								<span class="typed-bread"></span>
