--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<div class="menu-topmenu-container">
 							<ul class="menu">
 								<li class="menu-item current-menu-item">
-									<a href="index_slider.html">Home</a>
+									<a href="index.html">Home</a>
 									<!-- <ul class="sub-menu">
 										<li class="menu-item"><a href="index.html">Home Default</a></li>
 										<li class="menu-item"><a href="index_creative.html">Home Creative</a></li>
