--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
-					<a href="#">
+					<a href="aukik_resume.pdf">
 						<span class="mask-lnk">AUKIK <strong>AURNAB</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
 					</a>
