--- a/resume_image.html
+++ b/resume_image.html
@@ -101,7 +101,7 @@
 
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
-					<a href="#">
+					<a href="aukik_resume.pdf">
 						<span class="mask-lnk">Aukik <strong>Aurnab</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
 					</a>
