Update page titles and CV download link

--- a/contacts_map.html
+++ b/contacts_map.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="beshleyua" />
 
 	<!-- Title -->
-	<title>Cvio - Resume/CV Template</title>
+	<title>Aukik Aurnab</title>
 
 	<!-- Fonts -->
 	<link
@@ -80,7 +80,7 @@
 
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
-					<a href="#">
+					<a href="aukik_resume.pdf">
 						<span class="mask-lnk">Aukik <strong>Aurnab</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
 					</a>
