--- a/resume_image.html
+++ b/resume_image.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Aukik Aurnab" />
 
 	<!-- Title -->
-	<title>Cvio - Resume/CV Template</title>
+	<title>Aukik Aurnab</title>
 
 	<!-- Fonts -->
 	<link
@@ -222,7 +222,7 @@
 							</ul>
 						</div>
 						<div class="bts">
-							<a href="#" class="btn hover-animated">
+							<a href="aukik_resume.pdf" class="btn hover-animated">
 								<span class="circle"></span>
 								<span class="lnk">Download CV</span>
 							</a>
