--- a/contacts_map.html
+++ b/contacts_map.html
@@ -47,7 +47,7 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<link rel="shortcut icon" href="images/aukik-logo.png">
 
 </head>
 
