--- a/resume_image.html
+++ b/resume_image.html
@@ -51,7 +51,7 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<link rel="shortcut icon" href="images/aukik-logo.png">
 
 	<script>
 		const slideTrack = document.querySelector('.slide-track-gpt');
