--- a/works_creative.html
+++ b/works_creative.html
@@ -47,7 +47,7 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<link rel="shortcut icon" href="images/aukik-logo.png">
 
 </head>
 
@@ -186,7 +186,7 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-1" class="has-popup-media hover-animated">
-									<img src="images/work1.png" class="wp-post-image" alt="" />
+									<img src="images/bismo.svg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
@@ -202,22 +202,27 @@
 							</div>
 							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/work1.png);"></div>
+									<div class="image" style="background-image: url(images/bismo-4.png);"></div>
 									<div class="desc single-post-text">
 										<div class="category">WEBAPP</div>
 										<h4>BISMO</h4>
-										<h5 style="color:white">Making Businesses Eficient and Cashless.</h5>
+										<h5 style="color:white">Enterprise Finance Management Software</h5>
 										<p>
-											Talk about Bismo here, goals, what set out to do etc.
+											An enterprise finance management solution that helps to make business efficient.
 										</p>
 										<ul>
-											<li>Bismo offers 1 service.</li>
-											<li>Bismo offers 2 service.</li>
-											<li>Bismo offers 3 service.</li>
-											<li>Bismo offers 4 service.</li>
+											<li>Projectbased Expense/Perdiem/Advance Submission</li>
+											<li>Expense/Advance approval and reimbursement workflow</li>
+											<li>Charts of accounts</li>
+											<li>Vendor Bills Management (Receivables)</li>
+											<li>Invoice Management (Payables) and Customer Tracking</li>
+											<li>Donor/Investment Management</li>
+											<li>Financial Reports and automated double entry</li>
+											<li>Employee salary disbursement tracking</li>
+											<li>Employee and Company document management</li>
 										</ul>
 										<p>
-											Conclude with something about something nice?
+											We aim to make businesses Cashless and Efficient
 										</p>
 										<a href="https://bismoapps.com/lander" class="btn hover-animated">
 											<span class="circle"></span>
@@ -231,8 +236,8 @@
 
 						<div class="box-item f-content">
 							<div class="image">
-								<a href="#popup-1" class="has-popup-media hover-animated">
-									<img src="images/work2.png" class="wp-post-image" alt="" />
+								<a href="#popup-2" class="has-popup-media hover-animated">
+									<img src="images/homenout2.svg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
@@ -246,27 +251,28 @@
 									</span>
 								</a>
 							</div>
-							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+							<div id="popup-2" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/work2.png);"></div>
+									<div class="image" style="background-image: url(images/homenout.svg);"></div>
 									<div class="desc single-post-text">
 										<div class="category">WEBAPP</div>
 										<h4>Home & Out</h4>
-										<h5 style="color:white">Home outside home.</h5>
+										<h5 style="color:white">Catering Service Marketplace</h5>
 										<p>
-											Home & out is an US based startup which aims to do what write here. When it started how maybe
-											story?
+											Home & out is an US based catering service marketplace
 										</p>
 										<ul>
-											<li>It offers thse services</li>
-											<li>and It offers thse services</li>
-											<li>and It offers thse services</li>
-											<li>and also It offers thse services</li>
+											<li>Search Caterers</li>
+											<li>Select recipes and tray size</li>
+											<li>Cart and Order Placement</li>
+											<li>Caterer Registration</li>
+											<li>Panel for Caterer to manage orders</li>
+											<li>Caterer update Menu and Information </li>
 										</ul>
-										<p>
-											what is the aim etc
-										</p>
-										<a href="works_single_1.html" class="btn hover-animated">
+										<!-- <p>
+
+										</p> -->
+										<a href="https://www.homenout.com" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Official Website</span>
 										</a>
@@ -277,7 +283,7 @@
 
 						<div class="box-item f-content">
 							<div class="image">
-								<a href="#popup-1" class="has-popup-media hover-animated">
+								<a href="#popup-3" class="has-popup-media hover-animated">
 									<img src="images/work3.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -292,7 +298,7 @@
 									</span>
 								</a>
 							</div>
-							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image" style="background-image: url(images/work3.jpg);"></div>
 									<div class="desc single-post-text">
