Update works_creative.html with new project and popup

--- a/works_creative.html
+++ b/works_creative.html
@@ -193,7 +193,7 @@
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
 													<span class="category">SAAS WEBAPP</span>
-													<span class="name">BISMO</span>
+													<span class="name">Bismo</span>
 												</span>
 											</span>
 										</span>
@@ -333,7 +333,51 @@
 							</div>
 						</div>
 
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-11" class="has-popup-media hover-animated">
+									<img src="images/chatbot.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">CHATBOT</span>
+													<span class="name">Virtual Assistant</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image" style="background-image: url(images/chatbot.png);"></div>
+									<div class="desc single-post-text">
+										<div class="category">BOT</div>
+										<h4>Virtual Assistant</h4>
+										<p>
+											The virtual assistant is a versatile AI-powered tool designed to assist with a wide range of
+											tasks. It constantly learns and evolves, aiming to provide the best possible support.
 
+											<li>Assists with answering questions, providing information, and completing tasks</li>
+											<li>Continuously learns and improves its capabilities</li>
+											<li>Data stored in vector database Qdrant</li>
+											<li>Utilizes Langchain for interacting with large language models (LLMs)</li>
+											<li>Employs Gemini for the project</li>
+											<li>Gathers information from the notes that I make in Obsidian note-taking application</li>
+											<li>Leverages Retrieval Augmented Generation (RAG) to create the virtual assistant</li>
+										</p>
+										<ul>
+
+											<a href="#" class="btn hover-animated">
+												<span class="circle"></span>
+												<span class="lnk">View Project</span>
+											</a>
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<div class="box-item f-content">
 							<div class="image">
@@ -630,7 +674,6 @@
 								</div>
 							</div>
 						</div>
-
 
 
 					</div>
