--- a/works_creative.html
+++ b/works_creative.html
@@ -237,7 +237,7 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-2" class="has-popup-media hover-animated">
-									<img src="images/homenout2.svg" class="wp-post-image" alt="" />
+									<img src="images/homenout2.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
@@ -300,7 +300,7 @@
 							</div>
 							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/solar-2.svg);"></div>
+									<div class="image" style="background-image: url(images/solar2.png);"></div>
 									<div class="desc single-post-text">
 										<div class="category">WEBAPP/AI</div>
 										<h4>Solar Mapping</h4>
@@ -336,7 +336,7 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-11" class="has-popup-media hover-animated">
-									<img src="images/chatbot.png" class="wp-post-image" alt="" />
+									<img src="images/chatbot2.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
@@ -352,7 +352,7 @@
 							</div>
 							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/chatbot.png);"></div>
+									<div class="image" style="background-image: url(images/chatbot2.png);"></div>
 									<div class="desc single-post-text">
 										<div class="category">BOT</div>
 										<h4>Virtual Assistant</h4>
@@ -570,7 +570,7 @@
 							</div>
 							<div id="popup-6" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/mr-market.jpeg);"></div>
+									<div class="image" style="background-image: url(images/mr-market2.png);"></div>
 									<div class="desc single-post-text">
 										<div class="category">SCRAPPER/WEBAPP</div>
 										<h4>Mr Market</h4>
