--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>Aukik Aurnab</strong>, Cheif Technology Officer<br />
+								Hello, I’m <strong>Aukik Aurnab</strong>, Chief Technology Officer<br />
 								of Bismo.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
