Update works_creative.html with new project and stack information

--- a/works_creative.html
+++ b/works_creative.html
@@ -224,6 +224,10 @@
 										<p>
 											We aim to make businesses Cashless and Efficient
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">React.js, Express.js, Postgresql, Prisma ORM, Azure App
+											Service, Docker, Azure Container Registry, Azure Blob Storage</p>
 										<a href="https://bismoapps.com" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Official Website</span>
@@ -269,7 +273,11 @@
 											<li>Panel for Caterer to manage orders</li>
 											<li>Caterer update Menu and Information </li>
 										</ul>
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS (ejs), Prisma ORM, Azure App
+											Service, Docker, Azure Container Registry, Azure blob storage</p>
 										<!-- <p>
+
 
 										</p> -->
 										<a href="https://www.homenout.com" class="btn hover-animated">
@@ -324,6 +332,9 @@
 											the most sunlight to optimize the placement of the solar panels. We are utilizing the Google Solar
 											API to facilitate these features.
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -369,7 +380,8 @@
 											<li>Leverages Retrieval Augmented Generation (RAG) to create the virtual assistant</li>
 										</p>
 										<ul>
-
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, Mongodb</p>
 											<a href="#" class="btn hover-animated">
 												<span class="circle"></span>
 												<span class="lnk">View Project</span>
@@ -420,6 +432,9 @@
 											capability to generate comments using AI, facilitating efficient and targeted engagement with the
 											user's audience.
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">FastAPI, Selenium(Proxy bypass), Mongodb</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -468,6 +483,10 @@
 										<p>
 											We aim to make businesses Cashless and Efficient
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">Express.js, Svelte.js, Prisma ORM, Postgresql, Langchain,
+											Fastapi, Azure Blob Storage</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -503,6 +522,9 @@
 										<p>
 											My previous portfolio website built using Svelte and Tailwind CSS.
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">Svelte.js</p>
 
 										<a href="https://myportfolio-six-green.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -540,6 +562,9 @@
 											Website of alldoc (now known as bismo) built using React.
 											More people get to know about the product and I learnt more about React and TailwindCSS.
 										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">React.js</p>
 
 										<a href="https://alldoc-website-new.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -583,7 +608,8 @@
 											analyzing tools were made by taking Rule#1
 											book as reference.
 										</p>
-
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">React.js, FastAPI, Mongodb, Selenium</p>
 
 										<a href="https://mr-market.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -625,7 +651,8 @@
 											using express, nodejs, ejs and mongodb.
 										</p>
 										<ul>
-
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS (ejs), mongodb</p>
 											<a href="works_single_1.html" class="btn hover-animated">
 												<span class="circle"></span>
 												<span class="lnk">View Project</span>
@@ -665,6 +692,8 @@
 											many other fun stuff.
 										</p>
 										<ul>
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">Node.js</p>
 
 											<a href="https://github.com/aukik/DiscordBotOneForAll" class="btn hover-animated">
 												<span class="circle"></span>
