Update works_creative.html with new project and stack information

--- a/works_creative.html
+++ b/works_creative.html
@@ -228,7 +228,7 @@
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
 										<p style="color:white; margin-top:5px;">React.js, Express.js, Postgresql, Prisma ORM, Azure App
 											Service, Docker, Azure Container Registry, Azure Blob Storage</p>
-										<a href="https://bismoapps.com" class="btn hover-animated">
+										<a href="https://app.bismoapps.com" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Official Website</span>
 										</a>
@@ -346,43 +346,56 @@
 
 						<div class="box-item f-content">
 							<div class="image">
-								<a href="#popup-11" class="has-popup-media hover-animated">
-									<img src="images/chatbot2.png" class="wp-post-image" alt="" />
+								<a href="#popup-12" class="has-popup-media hover-animated">
+									<img src="images/smartgrad-ai.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
-													<span class="category">CHATBOT</span>
-													<span class="name">Virtual Assistant</span>
+													<span class="category">Smartgrad AI</span>
+													<span class="name">AI Agent and CV analyzer</span>
 												</span>
 											</span>
 										</span>
 									</span>
 								</a>
 							</div>
-							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
-								<div class="content">
-									<div class="image" style="background-image: url(images/chatbot2.png);"></div>
-									<div class="desc single-post-text">
-										<div class="category">BOT</div>
-										<h4>Virtual Assistant</h4>
-										<p>
-											The virtual assistant is a versatile AI-powered tool designed to assist with a wide range of
-											tasks. It constantly learns and evolves, aiming to provide the best possible support.
 
-											<li>Assists with answering questions, providing information, and completing tasks</li>
-											<li>Continuously learns and improves its capabilities</li>
-											<li>Data stored in vector database Qdrant</li>
-											<li>Utilizes Langchain for interacting with large language models (LLMs)</li>
-											<li>Employs Gemini for the project</li>
-											<li>Gathers information from the notes that I make in Obsidian note-taking application</li>
-											<li>Leverages Retrieval Augmented Generation (RAG) to create the virtual assistant</li>
+
+							<div id="popup-12" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image" style="background-image: url(images/smartgrad-ai.png);"></div>
+									<div class="desc single-post-text">
+										<div class="category">Smartgrad AI</div>
+										<h4>AI Agent and CV analyzer</h4>
+										<p>
+											An AI Agent in chatbot format and a CV analyzer for a company called SmartGrad. This AI agent
+											assists students in finding suitable postgraduate universities by asking for their background,
+											preferences, and profile information to provide personalized university recommendations. The
+											chatbot offers consultancy for studying abroad, leveraging a knowledge base stored in a Qdrant
+											vector database. The project utilized various advanced technologies and frameworks to deliver a
+											seamless and efficient user experience.
+
+											<li>Helps students find suitable postgraduate universities.</li>
+											<li>Asks for background, preferences, and profile information.</li>
+											<li>Provides personalized university recommendations.</li>
+											<li>Uses a knowledge base stored in Qdrant vector database.</li>
+											<li>Utilizes RAG technique to fetch information from db.</li>
+											<li>Built using Langchain for conversational management.</li>
+											<li>FastAPI used for external API calls.</li>
+											<li>Stores leads and conversation data in MongoDB.</li>
+											<li>The CV Analyzer Analyzes student CVs</li>
+											<li>Suggests improvements based on standards provided.</li>
+											<li>CVs stored in Azure Blob Storage and Gemini is the llm that is used here.</li>
+
 										</p>
 										<ul>
 											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, Mongodb</p>
-											<a href="#" class="btn hover-animated">
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, mongodb, Azure
+												Blob Storage</p>
+											<a href="https://langchainchatbot-3unenkkbsvf7sttsp4hzct.streamlit.app/"
+												class="btn hover-animated">
 												<span class="circle"></span>
 												<span class="lnk">View Project</span>
 											</a>
@@ -390,6 +403,8 @@
 								</div>
 							</div>
 						</div>
+
+
 
 						<div class="box-item f-content">
 							<div class="image">
@@ -439,6 +454,55 @@
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-11" class="has-popup-media hover-animated">
+									<img src="images/chatbot2.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">CHATBOT</span>
+													<span class="name">Virtual Assistant</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+
+
+							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image" style="background-image: url(images/chatbot2.png);"></div>
+									<div class="desc single-post-text">
+										<div class="category">BOT</div>
+										<h4>Virtual Assistant</h4>
+										<p>
+											The virtual assistant is a versatile AI-powered tool designed to assist with a wide range of
+											tasks. It constantly learns and evolves, aiming to provide the best possible support.
+
+											<li>Assists with answering questions, providing information, and completing tasks</li>
+											<li>Continuously learns and improves its capabilities</li>
+											<li>Data stored in vector database Qdrant</li>
+											<li>Utilizes Langchain for interacting with large language models (LLMs)</li>
+											<li>Employs Gemini for the project</li>
+											<li>Gathers information from the notes that I make in Obsidian note-taking application</li>
+											<li>Leverages Retrieval Augmented Generation (RAG) to create the virtual assistant</li>
+										</p>
+										<ul>
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG</p>
+											<a href="#" class="btn hover-animated">
+												<span class="circle"></span>
+												<span class="lnk">View Project</span>
+											</a>
 									</div>
 								</div>
 							</div>
