Update resume_image.html with additional frontend frameworks and technologies

--- a/resume_image.html
+++ b/resume_image.html
@@ -250,8 +250,8 @@
 								<div class="icon"><span class="fas fa-code"></span></div>
 								<div class="name">Web Development</div>
 								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
-									and implementing OpenAI APIs. Skilled in frontend development with React and SvelteKit, and in styling
-									using Tailwind CSS.</div>
+									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
+									in styling using Tailwind CSS.</div>
 							</div>
 						</div>
 
