feat: Add Redis and RabbitMQ for caching and pub-sub functionality

--- a/resume_image.html
+++ b/resume_image.html
@@ -251,7 +251,7 @@
 								<div class="name">Web Development</div>
 								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
 									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
-									in styling using Tailwind CSS.</div>
+									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub </div>
 							</div>
 						</div>
 
@@ -334,6 +334,13 @@
 											alt="github" />
 										<img width="326" height="326" src="https://img.icons8.com/nolan/326/wireshark--v1.png"
 											alt="wireshark--v1" />
+
+										<img width="326" height="326"
+											src="https://www.rabbitmq.com/assets/files/rabbitmq-logo-e91cacd38fcef5219149bc5cfa10b384.svg"
+											alt="rabbitmq--v1" />
+
+										<img width="326" height="326" src="https://img.icons8.com/color/326/redis--v2.png"
+											alt="redis--v2" />
 										<img width="326" height="326" src="https://img.icons8.com/doodle/326/svetle.png" alt="svetle" />
 									</div>
 									<div class="slide-gpt">
@@ -414,6 +421,12 @@
 							</li>
 							<li>
 								<div class="name">Jest</div>
+							</li>
+							<li>
+								<div class="name">Redis</div>
+							</li>
+							<li>
+								<div class="name">RabbitMQ</div>
 							</li>
 							<li>
 								<div class="name">Supertest</div>
