--- a/works_creative.html
+++ b/works_creative.html
@@ -334,7 +334,7 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js</p>
+										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js, Redis</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -444,12 +444,13 @@
 										<p>
 											This tool can be utilized for follower analysis, enabling segmentation and categorization of an
 											Instagram user's followers based on their profiles and activities. Additionally, it has the
-											capability to generate comments using AI, facilitating efficient and targeted engagement with the
+											capability to generate comments using AI based on the picture posted on instagram, facilitating
+											efficient and targeted engagement with the
 											user's audience.
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">FastAPI, Selenium(Proxy bypass), Mongodb</p>
+										<p style="color:white; margin-top:5px;">FastAPI, Selenium(Proxy bypass), Mongodb, RabbitMQ</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
