Update resume_image.html and works_creative.html with new technologies and stack information

--- a/works_creative.html
+++ b/works_creative.html
@@ -274,7 +274,8 @@
 											<li>Caterer update Menu and Information </li>
 										</ul>
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS (ejs), Prisma ORM, Azure App
+										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS, Postgresql, PostGIS, Prisma
+											ORM, Azure App
 											Service, Docker, Azure Container Registry, Azure blob storage</p>
 										<!-- <p>
 
