--- a/resume_image.html
+++ b/resume_image.html
@@ -474,6 +474,9 @@
 								<div class="name">PostgreSQL</div>
 							</li>
 							<li>
+								<div class="name">PostGIS</div>
+							</li>
+							<li>
 								<div class="name">MongoDB</div>
 							</li>
 							<li>
