Update works_creative.html with new project and stack information

--- a/works_creative.html
+++ b/works_creative.html
@@ -226,7 +226,8 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">React.js, Express.js, Postgresql, Prisma ORM, Azure App
+										<p style="color:white; margin-top:5px;">React.js, Express.js, Postgresql, Prisma ORM, Tailwind CSS,
+											Azure App
 											Service, Docker, Azure Container Registry, Azure Blob Storage</p>
 										<a href="https://app.bismoapps.com" class="btn hover-animated">
 											<span class="circle"></span>
@@ -335,7 +336,8 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js, Redis</p>
+										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js,Tailwind CSS,
+											Redis</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -451,7 +453,8 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">FastAPI, Selenium(Proxy bypass), Mongodb, RabbitMQ</p>
+										<p style="color:white; margin-top:5px;">FastAPI, Selenium(Proxy bypass), Svelte, Tailwind CSS,
+											Mongodb, RabbitMQ</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
@@ -551,7 +554,8 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Express.js, Svelte.js, Prisma ORM, Postgresql, Langchain,
+										<p style="color:white; margin-top:5px;">Express.js, Svelte.js, Tailwind CSS, Prisma ORM, Postgresql,
+											Langchain,
 											Fastapi, Azure Blob Storage</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
@@ -590,7 +594,7 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Svelte.js</p>
+										<p style="color:white; margin-top:5px;">Svelte.js, Tailwind CSS</p>
 
 										<a href="https://myportfolio-six-green.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -630,7 +634,7 @@
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">React.js</p>
+										<p style="color:white; margin-top:5px;">React.js, Tailwind CSS</p>
 
 										<a href="https://alldoc-website-new.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
@@ -675,7 +679,7 @@
 											book as reference.
 										</p>
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">React.js, FastAPI, Mongodb, Selenium</p>
+										<p style="color:white; margin-top:5px;">React.js, FastAPI, Tailwind CSS, Mongodb, Selenium</p>
 
 										<a href="https://mr-market.vercel.app/" class="btn hover-animated">
 											<span class="circle"></span>
