Update works_creative.html with new project name and stack information

--- a/works_creative.html
+++ b/works_creative.html
@@ -249,7 +249,7 @@
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
 													<span class="category">Online Marketplace</span>
-													<span class="name">Home & Out</span>
+													<span class="name">Katerout</span>
 												</span>
 											</span>
 										</span>
@@ -261,10 +261,10 @@
 									<div class="image" style="background-image: url(images/homenout.svg);"></div>
 									<div class="desc single-post-text">
 										<div class="category">Marketplace</div>
-										<h4>Home & Out</h4>
+										<h4>Katerout</h4>
 										<h5 style="color:white">Catering Service Marketplace</h5>
 										<p>
-											Home & out is an US based catering service marketplace
+											Katerout is an US based catering service marketplace
 										</p>
 										<ul>
 											<li>Search Caterers</li>
@@ -282,7 +282,7 @@
 
 
 										</p> -->
-										<a href="https://www.homenout.com" class="btn hover-animated">
+										<a href="https://www.katerout.com" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Official Website</span>
 										</a>
