Update resume_image.html and works_creative.html with new technologies and stack information

--- a/resume_image.html
+++ b/resume_image.html
@@ -204,10 +204,10 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! I’m Aukik Aurnab. I am a lifelong learner who finds joy in acquiring knowledge. My interests often
+						<p>Hello! I'm Aukik Aurnab. I am a lifelong learner who finds joy in acquiring knowledge. My interests often
 							align with my career, making the learning process feel less like work and more like a personal adventure.
 							I am not just confined to my field of work, I love to gather diversified knowledge on various fields. I
-							value freedom and prefer to do things in my own way. This doesn’t mean I disregard advice. In fact, I take
+							value freedom and prefer to do things in my own way. This doesn't mean I disregard advice. In fact, I take
 							advice from people based on their credibility over the topic. This approach helps me make informed
 							decisions and be efficient in my work. One of my defining traits is that I love playing the long-term
 							game. I believe in making decisions that will benefit me in the long run, rather than seeking instant
@@ -251,7 +251,7 @@
 								<div class="name">Web Development</div>
 								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
 									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
-									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub </div>
+									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub work. </div>
 							</div>
 						</div>
 
@@ -259,8 +259,9 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-cogs"></span></div>
 								<div class="name">System Engineer</div>
-								<div class="text">Expert in system architecture, database engineering, test automation, and bottleneck
-									identification. Proficient with tools like Wireshark and Fiddler.</div>
+								<div class="text">Expert in system architecture, database engineering, test automation,monitoring and
+									bottleneck identification. Proficient with tools like Wireshark, Fiddler, Prometheus and Grafana.
+								</div>
 							</div>
 						</div>
 
@@ -268,8 +269,9 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-cloud"></span></div>
 								<div class="name">Cloud Architect</div>
-								<div class="text">Skilled in cloud hosting, reverse proxy, CDN implementation, version control, and
-									Docker containerization. Experienced with AWS, Azure, Cloudflare, Nginx, and GitHub.</div>
+								<div class="text">Skilled in cloud hosting, reverse proxy, CDN implementation, version control,
+									Docker containerization and Kubernetes. Experienced with Azure, Cloudflare, Nginx, Ansible, Azure
+									Pipelines, Jenkins, Terraform and Git.</div>
 							</div>
 						</div>
 
@@ -286,7 +288,7 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-spider"></span></div>
 								<div class="name">Web Scrapping</div>
-								<div class="text">Proficient in web scraping techniques utilizing Selenium, Puppeteer, and Playwright by
+								<div class="text">Versed in web scraping techniques utilizing Selenium and Playwright by
 									using proxy servers. Navigating online environments to extract valuable data efficiently and
 									accurately.</div>
 							</div>
@@ -296,9 +298,10 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-rocket"></span></div>
 								<div class="name">ML and LLM Integration</div>
-								<div class="text">Proficient in crafting data analysis pipelines, developing/integrating Machine
-									Learning and Language Models (LLM) capability into diverse projects seemlessly using tools like
-									Langchain and Streamlit.</div>
+								<div class="text">Skilled in crafting data analysis pipelines and seamlessly developing and integrating
+									machine learning and language model (LLM) capabilities into diverse projects using tools like
+									Langchain and Streamlit. Developed custom knowledge base LLM implementations utilizing RAG techniques,
+									prompt engineering, and vector databases such as Pinecone, Qdrant, and FAISS.</div>
 							</div>
 						</div>
 
@@ -373,6 +376,16 @@
 										<img width="326" height="326"
 											src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/326/external-mongodb-a-cross-platform-document-oriented-database-program-logo-color-tal-revivo.png"
 											alt="external-mongodb-a-cross-platform-document-oriented-database-program-logo-color-tal-revivo" />
+									</div>
+
+									<div class="slide-gpt">
+										<img width="326" height="326" src="https://img.icons8.com/color/326/jenkins.png" alt="jenkins" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/prometheus-app.png"
+											alt="prometheus-app" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/grafana.png" alt="grafana" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/ansible.png" alt="ansible" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/kubernetes.png"
+											alt="kubernetes" />
 									</div>
 								</div>
 							</div>
@@ -471,19 +484,46 @@
 								<div class="name">Python Flask</div>
 							</li>
 							<li>
+								<div class="name">RAG</div>
+							</li>
+							<li>
+								<div class="name">Qdrant</div>
+							</li>
+							<li>
+								<div class="name">Pinecone</div>
+							</li>
+							<li>
+								<div class="name">Faiss</div>
+							</li>
+							<li>
 								<div class="name">PostgreSQL</div>
 							</li>
 							<li>
 								<div class="name">PostGIS</div>
 							</li>
 							<li>
+								<div class="name">Kubernetes</div>
+							</li>
+							<li>
 								<div class="name">MongoDB</div>
+							</li>
+							<li>
+								<div class="name">Jenkins</div>
 							</li>
 							<li>
 								<div class="name">Langchain</div>
 							</li>
 							<li>
 								<div class="name">OpenAI</div>
+							</li>
+							<li>
+								<div class="name">Ansible</div>
+							</li>
+							<li>
+								<div class="name">Prometheus</div>
+							</li>
+							<li>
+								<div class="name">Grafana</div>
 							</li>
 						</ul>
 					</div>
@@ -510,20 +550,24 @@
 									<div class="date">May 2023 - Present</div>
 									<div class="name">Chief Technology Officer-Bismo</div>
 									<dive class="text">As a Team Lead, I specialize in system architecture, backend development with
-										Express, PrismaORM, and PostgreSQL, database engineering (especially PostgreSQL), test automation
+										Express, PrismaORM, database engineering (especially PostgreSQL), test automation
 										using Jest, SuperTest, and Playwright, implementing Reverse Proxy (Nginx) and CDNs (Cloudflare &
-										Cloudfront), frontend development (React/Svelte), integrating OpenAI APIs via tools like Langchain,
+										Cloudfront), frontend development (React/Svelte), integrating OpenAI APIs via tools like Langchain
+										leveraging RAG techniques (Qdrant),
 										bottleneck discovery and latency minimization with Wireshark and Fiddler, and deployment using
-										Docker containers and CI/CD pipelines.</dive>
+										Docker containers, Kubernetes and building CI/CD pipelines using Jenkins and Azure Pipelines.</dive>
 								</div>
 
 								<div class="resume-item content-box">
 									<div class="date">Nov 2022 - May 2023</div>
 									<div class="name">System Engineer - allDoc</div>
-									<div class="text">I analyzed business and technical requirements, developed robust backends with
-										Express, Prisma, and PostgreSQL. I worked with HTTP3 protocols (QUIC, TLS 1.3, HTTP2), version
-										controlling with GitHub, and cloud hosting on Azure VM and AWS EC2. My deployment expertise lies in
-										Docker containers and CI/CD pipelines.</div>
+									<div class="text">I analyzed business and technical requirements to develop robust backends using
+										Express, Prisma, and PostgreSQL. I worked with HTTP/3 protocols (QUIC, TLS 1.3, HTTP/2), managed
+										version control with GitHub, and handled cloud hosting on Azure VM and AWS EC2. My DevOps experience
+										in this position includes building caching techniques with Redis, implementing pub-sub systems with
+										RabbitMQ, and monitoring with Prometheus and Grafana, as well as Docker containerization and
+										preparing CI/CD pipelines.
+									</div>
 								</div>
 
 								<div class="resume-item content-box" style="border-bottom: 2px solid white;">
